fixed role problem

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=3000
 PGHOST='localhost'
 PGUSER=milk_admin
 PGDATABASE=milkyway
-PGPASSWORD="MeinVatergehtEinkaufen,daderKuehlschrankgestorbenist."
+PGPASSWORD="passMilk"
 PGPORT=5432
