--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-PGHOST='localhost'
-PGUSER=milk_admin
-PGDATABASE=milkyway
-PGPASSWORD="passMilk"
+PGHOST='dpg-cgqikau4dad5es12ji50-a.frankfurt-postgres.render.com'
+PGUSER='admin'
+PGDATABASE='milkyway_i3k7'
+PGPASSWORD="IVBvaCzsx8O4ZA1qmzlFS5lYDoljYCeh"
 PGPORT=5432
