--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^6.0.1",
+    "helmet-csp": "^3.4.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.8.0"
